--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             これからよろしくお願いします！
         </p>
         <p>
-            <a href="./work/index.html">作品一覧</a>
+            <a href="./works/index.html">作品一覧</a>
         </p>
     </body>
     </html>
