--- a/works/counter.html
+++ b/works/counter.html
@@ -2,9 +2,8 @@
 <html lang="ja">
 <head>
     <mata charset="UTF-8">
-        <script src "./counter.js"></script>
+        <script src "./works/counter.js"></script>
         <title>カウンター</title>
-
 </head>
 <body>
     <h1>カウンター</h1>
