--- a/works/counter.html
+++ b/works/counter.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <mata charset="UTF-8">
-        <script src "./works/counter.js"></script>
+        <script src = "./works/counter.js"></script>
         <title>カウンター</title>
 </head>
 <body>
