--- a/works/counter.html
+++ b/works/counter.html
@@ -1,7 +1,7 @@
 
 <html lang="ja">
 <head>
-    <mata charset="UTF-8">
+    <meta charset="UTF-8">
         <script src = "./works/counter.js"></script>
         <title>カウンター</title>
 </head>
