--- a/works/counter.html
+++ b/works/counter.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
       <meta charset="UTF-8">
-      <script src="./works/counter.js"></script>
+      <script src="./counter.js"></script>
       <title>カウンター</title>
     </head>
     <body>
